--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link  rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>just rebuilding the website to make it simpler, but fun</h1>
+    <center>
+        <h1>Games</h1>
+    </center>
+    <a href="#">
+        <a href="games/slope.html">
+        <button>Test</button>
+    </a>
 </body>
 </html>
