Added credits folder, added thx.html & styless.css into it.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <center>
         <h1>Games</h1>
     </center>
+    <a href="credits/thx.html">
+        <button>Sources</button>
+    </a>
+    <hr>
         <a href="games/slope.html">
-        <button>Testtttttttttttttsdfadasdadadat</button>
+        <button>Slope</button>
     </a>
 </body>
 </html>
