Added 1v1.lol (embed from www.gameflare.com) / added "Go Back" button to navigate to the main website.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     </a>
     <hr>
         <a href="games/slope.html">
-        <button>Slope</button>
+        <button>Slope Game (y8.com)</button>
     </a>
+
+    <a href="games/1v1lol.html">
+        <button>1v1.lol (embed from https://www.gameflare.com/ )</button>
+    </a>
+    
+    
 </body>
 </html>
