--- a/games/slope.html
+++ b/games/slope.html
@@ -1,2 +1,15 @@
-<center><h1>Slope Game</h1></center>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Slope Game</title>
+    <link rel="stylesheet" href="stylesss.css">
+</head>
+<body>
+    <center><h1>Slope Game</h1></center>
 <iframe src="https://storage.y8.com/y8-studio/unity_webgl/bitlaslt/slope_v_1_2_5/?key=9757549&amp;value=80527" style="width: 100%; height: 100%;">Browser Doesn't Support iframe</iframe>
+<a href="https://bloxxedservixes.online/">
+    <button>Go Back</button>
+</a>
+</body>
+</html>
