Added more to credits, added minecraft in games section

--- a/index.html
+++ b/index.html
@@ -3,25 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>games website</title>
+    <title>welcome website</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <center>
-        <h1>Games</h1>
+        <h1>Welcome! </h1>
     </center>
     <a href="credits/thx.html">
-        <button>Sources</button>
+        <button>Sources (Credits)</button>
     </a>
     <hr>
-        <a href="games/slope.html">
-        <button>Slope Game (y8.com)</button>
-    </a>
-
-    <a href="games/1v1lol.html">
-        <button>1v1.lol (embed from https://www.gameflare.com/ )</button>
-    </a>
-    
-    
+        <a href="gameslobby/games.html">
+            <button>Games</button>
+        </a>
 </body>
 </html>
