forgot to include minecraft in games section

--- a/games/minecraft.html
+++ b/games/minecraft.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stylesss.css">
 </head>
 <body>
-    <center><h1>Minecraft</h1></center>
+    <center><h1>Minecraft 1.8</h1></center>
 <iframe src="./iframemc.html" style="width: 1300px; height: 900px;">Browser Doesn't Support iframe</iframe>
 <a href="https://bloxxedservixes.online/">
     <button>Go Back</button>
