--- a/gameslobby/games.html
+++ b/gameslobby/games.html
@@ -18,6 +18,9 @@
     <a href="games/1v1lol.html">
         <button>1v1.lol (embed from https://www.gameflare.com/ )</button>
     </a>
+    <a href="games/minecraft.html">
+        <button>Minecraft 1.8(eaglecraft)</button>
+    </a>
     <hr>
     <a href="https://bloxxedservixes.online/">
         <button>Go Back</button>
