Added button "My Github" in the main website

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <a href="credits/thx.html">
         <button>Sources (Credits)</button>
     </a>
+    <a href="https://github.com/wrdyyy/webgannes">
+        <button>My Github!</button>
+    </a>
     <hr>
         <a href="gameslobby/games.html">
             <button>Games</button>
