--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="credits/thx.html">
         <button>Sources (Credits)</button>
     </a>
-    <a href="https://github.com/wrdyyy/webgannes">
+    <a href="https://github.com/wrdyyy/webgannes" target="_blank">
         <button>My Github!</button>
     </a>
     <hr>
