--- a/gameslobby/games.html
+++ b/gameslobby/games.html
@@ -18,7 +18,7 @@
     <a href="games/1v1lol.html">
         <button>1v1.lol (embed from https://www.gameflare.com/ )</button>
     </a>
-    <a href="games/minecraft.html">
+    <a href="https://bloxxedservixes.online/games/minecraft.html">
         <button>Minecraft 1.8(eaglecraft)</button>
     </a>
     <hr>
