i cant get minecraft to work ):

--- a/games/minecraft.html
+++ b/games/minecraft.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <center><h1>Minecraft 1.8</h1></center>
-<iframe src="./iframemc.html" style="width: 1300px; height: 900px;">Browser Doesn't Support iframe</iframe>
+<p1>cant get it to work. Here's the download of the game https://file.io/MJFsvsrWSWm5 expires in 1 month (file downloaded directly from eaglecraft website) virustotal: https://www.virustotal.com/gui/file/8448ef5e4ad5839aaa4525bd516addb1f53812142bca9d1271bffcc08ac5c9ec it is just an html </p1>
 <a href="https://bloxxedservixes.online/">
     <button>Go Back</button>
 </a>
