fixed fail to redirect because i changed the folders

--- a/gameslobby/games.html
+++ b/gameslobby/games.html
@@ -11,11 +11,11 @@
         <h1>Games </h1>
     </center>
     <hr>
-    <a href="games/slope.html">
+    <a href="https://bloxxedservixes.online/games/slope.html">
         <button>Slope Game (y8.com)</button>
     </a>
 
-    <a href="games/1v1lol.html">
+    <a href="https://bloxxedservixes.online/games/1v1lol.html">
         <button>1v1.lol (embed from https://www.gameflare.com/ )</button>
     </a>
     <a href="https://bloxxedservixes.online/games/minecraft.html">
