tried to integrate a proxy browser

--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
         <a href="gameslobby/games.html">
             <button>Games</button>
         </a>
+        <a href="pranx/test.html">
+            <button>Misc</button>
+        </a>
 </body>
 </html>
