--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="gameslobby/games.html">
             <button>Games</button>
         </a>
-        <a href="pranx/test.html">
+        <a href="">
             <button>Misc</button>
         </a>
 </body>
