Re-added back Miscs (Web Browser Interstellar)

--- a/credits/thx.html
+++ b/credits/thx.html
@@ -14,6 +14,9 @@
     <h2>1v1.lol embed / https://www.gameflare.com/online-game/1v1-lol/ / ???</h2>
     <h2>Eagle craft / https://eaglercraft.com/ / credits is in the game at CREDITS.txt</h2>
     <hr>
+    <center><h1>Miscs Credits</h1></center>
+    <h2>Interstellar Browser / https://gointerstellar.app/</h2>
+    <hr>
     <center><p1>Welcome to https://bloxxedservixes.online.com is a tutorial platform where you can download free games, software, and other platform content from the internet. we have created our platform to act as a knowledge base where the clients get to discover and consume a host of media acts for their entertainment and knowledge needs. The edit as well as the distribution of all the content is taken care by our team to make sure that there is complete compliance with the copyright laws and the rights of content creators are also respected. We came up with an approach that explains our steps transparently and on a legal basis, ensuring that the process is safe and adventurous for all our users. Refer to our terms of service for the additional tips. Enjoy exploring and discovering new content on https://bloxxedservixes.online.com!</p1></center>
     <center><p2>Contact me at jade@bloxxedservixes.online.com in case of any copyright infringment or anything DMCA related.</p2></center>
     <a href="https://bloxxedservixes.online/">
