--- a/pranx/misclobby.html
+++ b/pranx/misclobby.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Misc</title>
+    <link href="stylessss.css" rel="stylesheet">
 </head>
 <body>
+    <center><h1>Miscs</h1></center>
+    <hr>
     <a href="https://bloxxedservixes.online/yolo/pranxy.html">
-        <button>test</button>
+        <button>Web Browser (Interstellar)</button>
     </a>
 </body>
 </html>
