Added Go back button in Misc, Interstellar Web Browser

--- a/yolo/pranxy.html
+++ b/yolo/pranxy.html
@@ -1,1 +1,17 @@
-<iframe src="https://ub.bloxxedservixes.online/" style="width: 100%; height: 100%;">Browser Doesn't Support iframe</iframe>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>UB</title>
+    <link rel="stylesheet" href="stylessss.css">
+</head>
+<body>
+    <h1>Web Browser (Interstellar)</h1>
+    <iframe src="https://ub.bloxxedservixes.online/" style="width: 100%; height: 100%;">Browser Doesn't Support iframe</iframe>
+    <a href="https://bloxxedservixes.online/">
+        <button>Go Back</button>
+    </a>
+</body>
+</html>
