--- a/yolo/pranxy.html
+++ b/yolo/pranxy.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Web Browser (Interstellar)</h1>
-    <iframe src="https://ub.bloxxedservixes.online/" style="width: 100%; height: 100%;">Browser Doesn't Support iframe</iframe>
+    <iframe src="https://ub.bloxxedservixes.online/" style="width: 1600px; height: 870px;">Browser Doesn't Support iframe</iframe>
     <a href="https://bloxxedservixes.online/">
         <button>Go Back</button>
     </a>
