Added "Go Back" in Miscs Category

--- a/pranx/misclobby.html
+++ b/pranx/misclobby.html
@@ -12,5 +12,9 @@
     <a href="https://bloxxedservixes.online/yolo/pranxy.html">
         <button>Web Browser (Interstellar)</button>
     </a>
+    <hr>
+    <a href="https://bloxxedservixes.online/">
+        <button>Go Back</button>
+    </a>
 </body>
 </html>
