--- a/gameslobby/games.html
+++ b/gameslobby/games.html
@@ -21,6 +21,9 @@
     <a href="https://bloxxedservixes.online/games/minecraft.html">
         <button>Minecraft 1.8(eaglecraft)</button>
     </a>
+    <a href="https://bloxxedservixes.online/games/2048.html">
+        <button>2048 Modified</button>
+    </a>
     <hr>
     <a href="https://bloxxedservixes.online/">
         <button>Go Back</button>
