--- a/credits/thx.html
+++ b/credits/thx.html
@@ -13,6 +13,7 @@
     <h2>Y8 games / https://www.y8.com/games/slope / game by @RobKaySF, music by @SynthR, published by @Y8.com</h2>
     <h2>1v1.lol embed / https://www.gameflare.com/online-game/1v1-lol/ / ???</h2>
     <h2>Eagle craft / https://eaglercraft.com/ / credits is in the game at CREDITS.txt</h2>
+    <h2>2048 Modified Game / https://nicholasegan.me/2048hack/ / Created By Gabrixele Cirulli, Tweaked by Nicholas Egan of Egansoft, Based on 1024 by Veewo Studio and conceptually similar to Threes by Asher Vollmer</h2>
     <hr>
     <center><h1>Miscs Credits</h1></center>
     <h2>Interstellar Browser / https://gointerstellar.app/</h2>
