--- a/games/2048.html
+++ b/games/2048.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <center><h1>2048 Modified</h1></center>
-    <iframe src="https://bloxxedservixes.online/games/2048game.html" style="width: 1600px; height: 870px;">Browser Doesn't Support iframe</iframe>
+    <iframe src="https://nicholasegan.me/2048hack/" style="width: 1600px; height: 870px;">Browser Doesn't Support iframe</iframe>
     <hr>
 <a href="https://bloxxedservixes.online/">
     <button>Go Back</button>
