--- a/games/2048.html
+++ b/games/2048.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>2048 game</title>
+    <link rel="stylesheet" href="stylesss.css">
 </head>
 <body>
     <center><h1>2048 Modified</h1></center>
