--- a/gameslobby/games.html
+++ b/gameslobby/games.html
@@ -24,6 +24,9 @@
     <a href="https://bloxxedservixes.online/games/2048.html">
         <button>2048 Modified</button>
     </a>
+    <a href="https://bloxxedservixes.online/games/nowgg.html">
+        <button>NOW.GG (Experimental)</button>
+    </a>
     <hr>
     <a href="https://bloxxedservixes.online/">
         <button>Go Back</button>
