now.gg still experimental

--- a/games/nowgg.html
+++ b/games/nowgg.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <center><h1>now.gg library</h1></center>
-    <iframe src="https://https://now.gg/" style="width: 1600px; height: 870px;">Browser Doesn't Support iframe</iframe>
+    <iframe src="https://now.gg/" style="width: 1600px; height: 870px;">Browser Doesn't Support iframe</iframe>
     <hr>
 <a href="https://bloxxedservixes.online/">
     <button>Go Back</button>
