changed design for games.html and css

--- a/gameslobby/games.html
+++ b/gameslobby/games.html
@@ -11,19 +11,30 @@
         <h1>Games </h1>
     </center>
     <hr>
-    <a href="https://bloxxedservixes.online/games/slope.html">
-        <button>Slope Game (y8.com)</button>
+    <div class="slopegame">
+        <a href="https://bloxxedservixes.online/games/slope.html">
+        <button>Slope Game (y8.com)</button> 
     </a>
-
+    <img class="slopepic" src="https://imgs.search.brave.com/2ZmV73OFoACUd3TWYcoqWNL17aJaEjCGOpyLJ1NAfww/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9wbGF5/c2xvcGUuY29tL2xp/bmtlci9zbG9wZS5q/cGc" alt="playslope.com image">
+</div>
+<div class="ivilol">
     <a href="https://bloxxedservixes.online/games/1v1lol.html">
         <button>1v1.lol (embed from https://www.gameflare.com/ )</button>
     </a>
-    <a href="https://bloxxedservixes.online/games/minecraft.html">
-        <button>Minecraft 1.8(eaglecraft)</button>
-    </a>
-    <a href="https://bloxxedservixes.online/games/2048.html">
-        <button>2048 Modified</button>
-    </a>
+    <img class="ivilolpic" src="https://imgs.search.brave.com/nmDzW1NnvwoaznYpVigmgq5aJ0YPonI9PiI_9OcqP94/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9saDMu/Z29vZ2xldXNlcmNv/bnRlbnQuY29tL1RN/QlYtSXhBRk9sRXBQ/THVEcXdXaHFsQUlH/NkN3UFNMY0xGZjZY/d3RXNzJfVW9BQm5Q/azhKcl9QeXNqVFJU/a1N3TzdOR1dZMHVf/dnU2MnpnUlYzS2dG/Z3Q9dzEyOC1oMTI4/LWUzNjUtcmotc2Mw/eDAwZmZmZmZm" alt="google 1v1lol">
+</div>
+    <div class="mc">
+        <a href="https://bloxxedservixes.online/games/minecraft.html">
+            <button>Minecraft 1.8(eaglecraft)</button>
+        </a>
+        <img class="mcpic" src="https://cdn.icon-icons.com/icons2/2699/PNG/512/minecraft_logo_icon_168974.png" alt="mcpic https://icon-icons.com/icon/minecraft-logo/168974 by VectorLogoZone">
+    </div>
+    <div class="tzfe">
+        <a href="https://bloxxedservixes.online/games/2048.html">
+            <button>2048 Modified</button>
+        </a>
+        <img class="tzfepic" src="https://imgs.search.brave.com/M8ps8vyw5vmrxrPk_LfTPqIX_rdIV_xHfS5VH4EvdB0/rs:fit:860:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvY29tbW9ucy90/aHVtYi8xLzE4LzIw/NDhfbG9nby5zdmcv/MjIwcHgtMjA0OF9s/b2dvLnN2Zy5wbmc" alt="2048pic">
+    </div>
     <hr>
     <a href="https://bloxxedservixes.online/">
         <button>Go Back</button>
