contribution by chatgpt to input modal. how does modal work?? added more to credits

--- a/pranx/misclobby.html
+++ b/pranx/misclobby.html
@@ -12,6 +12,34 @@
     <a href="https://bloxxedservixes.online/yolo/pranxy.html">
         <button>Web Browser (Interstellar)</button>
     </a>
+    <!-- Button to trigger the modal -->
+<button onclick="openModal()">Image-Line FL Studio Producer Edition</button>
+
+<!-- The modal -->
+<div id="myModal" class="flstudio">
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span onclick="closeModal()" class="close">&times;</span>
+    <p>This content is found in Sampledrive.in, a site distributing for music from open sites. I found this site on G-MEH, also a site for distributing making music for educational purposes only. It was told by G-MEH that sampledrive.in is a trusted source for making music. This site (bloxxedservixes.online) will redirect to a 3rd party website to install this particular software. Educational purposes only.</p>
+      <a href="https://drive.google.com/file/d/1cPQlUlRNXAdY7sgWmr75F1QZUKoWMub4/view?usp=sharing">
+        <button>Install FL-Studio</button>
+      </a>
+  </div>
+</div>
+
+<script>
+    // Function to open the modal
+    function openModal() {
+        document.getElementById("myModal").style.display = "flex"; // Display the modal
+    }
+
+    // Function to close the modal
+    function closeModal() {
+        document.getElementById("myModal").style.display = "none"; // Hide the modal
+    }
+</script>
+    
+
     <hr>
     <a href="https://bloxxedservixes.online/">
         <button>Go Back</button>
