addition to previous commitment (about modal and more credits)

--- a/pranx/misclobby.html
+++ b/pranx/misclobby.html
@@ -21,9 +21,10 @@
   <div class="modal-content">
     <span onclick="closeModal()" class="close">&times;</span>
     <p>This content is found in Sampledrive.in, a site distributing for music from open sites. I found this site on G-MEH, also a site for distributing making music for educational purposes only. It was told by G-MEH that sampledrive.in is a trusted source for making music. This site (bloxxedservixes.online) will redirect to a 3rd party website to install this particular software. Educational purposes only.</p>
-      <a href="https://drive.google.com/file/d/1cPQlUlRNXAdY7sgWmr75F1QZUKoWMub4/view?usp=sharing">
+      <a href="https://www.sampledrive.in/image-line-fl-studio-producer-edition-21-2-3-4004-windows/">
         <button>Install FL-Studio</button>
       </a>
+      <p1>You will be redirected to https://www.sampledrive.in/image-line-fl-studio-producer-edition-21-2-3-4004-windows/</p1>
   </div>
 </div>
 
