Added more credits and two new games: Hangman Challenge and Block Parkour 2

--- a/gameslobby/games.html
+++ b/gameslobby/games.html
@@ -35,6 +35,18 @@
         </a>
         <img class="tzfepic" src="https://imgs.search.brave.com/M8ps8vyw5vmrxrPk_LfTPqIX_rdIV_xHfS5VH4EvdB0/rs:fit:860:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvY29tbW9ucy90/aHVtYi8xLzE4LzIw/NDhfbG9nby5zdmcv/MjIwcHgtMjA0OF9s/b2dvLnN2Zy5wbmc" alt="2048pic">
     </div>
+    <div class="blockparkourtwo">
+        <a href="https://bloxxedservixes.online/games/blockparkourII.html">
+            <button>Block Parkour 2 (y8.com)</button>
+        </a>
+        <img class="blockparkourtwopic" src="https://img.y8.com/cloud/v2-y8-thumbs-small-thumbnails-001/143792/small.gif" alt="blockparkourtwopic">
+    </div>
+    <div class="hangmanchallengegame">
+        <a href="https://bloxxedservixes.online/games/hangmanchallenge.html">
+            <button>Hangman Challenge (y8.com)</button>
+        </a>
+        <img class="hangmanchallengepic" src="https://img.y8.com/cloud/v2-y8-thumbs-small-thumbnails-001/134180/small.gif" alt="blockparkourtwopic">
+    </div>
     <hr>
     <a href="https://bloxxedservixes.online/">
         <button>Go Back</button>
