Did some changes on .css files (most) and a title change on the proxy

--- a/credits/thx.html
+++ b/credits/thx.html
@@ -14,6 +14,8 @@
     <h2>1v1.lol embed / https://www.gameflare.com/online-game/1v1-lol/ / ???</h2>
     <h2>Eagle craft / https://eaglercraft.com/ / credits is in the game at CREDITS.txt</h2>
     <h2>2048 Modified Game / https://nicholasegan.me/2048hack/ / Created By Gabrixele Cirulli, Tweaked by Nicholas Egan of Egansoft, Based on 1024 by Veewo Studio and conceptually similar to Threes by Asher Vollmer</h2>
+    <h2>Y8 games / Block Parkour 2 https://www.y8.com/games/parkour_block_2 / ???</h2>
+    <h2>Y8 games / Hangman Challenge https://www.y8.com/games/hangman_challenge / Game by funbestgames.com??</h2>
     <hr>
     <center><h1>Miscs Credits</h1></center>
     <h2>Interstellar Browser / https://gointerstellar.app/</h2>
