--- a/yolo/pranxy.html
+++ b/yolo/pranxy.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="stylessss.css">
 </head>
 <body>
-    <h1>Web Browser (Interstellar)</h1>
+    <h1>Web Browser (Interstellar): https://ub.bloxxedservixes.online/</h1>
     <iframe src="https://ub.bloxxedservixes.online/" style="width: 1600px; height: 870px;">Browser Doesn't Support iframe</iframe>
     <a href="https://bloxxedservixes.online/">
         <button>Go Back</button>
