--- a/games/hangmanchallenge.html
+++ b/games/hangmanchallenge.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hangman Challenge</title>
+    <link rel="stylesheet" href="stylesss.css">
 </head>
 <body>
     <center><h1>Hangman Challenge</h1></center>
