--- a/games/hangmanchallenge.html
+++ b/games/hangmanchallenge.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <center><h1>Hangman Challenge</h1></center>
-    <iframe src="https://html5.gamedistribution.com/rvvASMiM/c062d53d85834621874a138ef173857d/index.html?gd_sdk_referrer_url=https%3A%2F%2Fwww.y8.com%2Fgames%2Fhangman_challenge&key=y8&value=default&gd_zone_config=eyJwYXJlbnRVUkwiOiJodHRwczovL3d3dy55OC5jb20vZ2FtZXMvaGFuZ21hbl9jaGFsbGVuZ2UiLCJwYXJlbnREb21haW4iOiJ5OC5jb20iLCJ0b3BEb21haW4iOiJ5OC5jb20iLCJoYXNJbXByZXNzaW9uIjpmYWxzZSwibG9hZGVyRW5hYmxlZCI6dHJ1ZSwiaG9zdCI6Imh0bWw1LmdhbWVkaXN0cmlidXRpb24uY29tIiwidmVyc2lvbiI6IjEuNS4xNyJ9">Browser Doesn't Support iframe</iframe>
+    <iframe src="https://html5.gamedistribution.com/rvvASMiM/c062d53d85834621874a138ef173857d/index.html?gd_sdk_referrer_url=https%3A%2F%2Fwww.y8.com%2Fgames%2Fhangman_challenge&key=y8&value=default&gd_zone_config=eyJwYXJlbnRVUkwiOiJodHRwczovL3d3dy55OC5jb20vZ2FtZXMvaGFuZ21hbl9jaGFsbGVuZ2UiLCJwYXJlbnREb21haW4iOiJ5OC5jb20iLCJ0b3BEb21haW4iOiJ5OC5jb20iLCJoYXNJbXByZXNzaW9uIjpmYWxzZSwibG9hZGVyRW5hYmxlZCI6dHJ1ZSwiaG9zdCI6Imh0bWw1LmdhbWVkaXN0cmlidXRpb24uY29tIiwidmVyc2lvbiI6IjEuNS4xNyJ9" style="width: 1600px; height: 870px;">Browser Doesn't Support iframe</iframe>
     <hr>
 <a href="https://bloxxedservixes.online/">
     <button>Go Back</button>
