--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
         <a href="pranx/misclobby.html">
             <button>Misc</button>
         </a>
+        <a href="https://dev.bloxxedservixes.online/"><button class="hidden-button">u found me!, hidden dev website</button></a>
+        
 </body>
 </html>
